added gif background functioning

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/Lorenz_attractor_test.png" alt="" />
+										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Item 1</h2>
