--- a/index.html
+++ b/index.html
@@ -111,6 +111,19 @@
 										</div>
 									</a>
 								</article>
+								<article>
+
+									<ul class="actions fit">
+										<li><a href="#" class="button fit">LinkedIn</a></li>
+									</ul>
+									<ul class="actions fit">
+										<li><a href="#" class="button fit">GitHub</a></li>
+									</ul>
+
+								</article>
+
+
+
 								<!--
 								<article class="style6">
 									<span class="image">
