--- a/index.html
+++ b/index.html
@@ -114,10 +114,13 @@
 								<article>
 
 									<ul class="actions fit">
-										<li><a href="#" class="button fit">LinkedIn</a></li>
+										<li><a href="https://www.linkedin.com/in/shaanyadav/" class="button fit icon solid brands fa-linkedin">LinkedIn</a></li>
 									</ul>
 									<ul class="actions fit">
-										<li><a href="#" class="button fit">GitHub</a></li>
+										<li><a href="https://github.com/Shaan106" class="button fit icon brands fa-github">GitHub</a></li>
+									</ul>
+									<ul class="actions fit">
+										<li><a href="shaan@yadu.in" class="button fit icon fa-envelope">Contact me</a></li>
 									</ul>
 
 								</article>
