final edit of prototype 1

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 										<li><a href="https://github.com/Shaan106" class="button fit icon brands fa-github">GitHub</a></li>
 									</ul>
 									<ul class="actions fit">
-										<li><a href="shaan@yadu.in" class="button fit icon fa-envelope">Contact me</a></li>
+										<li><a href="mailto:shaan@yadu.in" class="button fit icon fa-envelope">Contact me</a></li>
 									</ul>
 
 								</article>
