--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 						</div>
 					</div>
 
-				<!-- Footer -->
+				<!-- Footer
 					<footer id="footer">
 						<div class="inner">
 							<section>
@@ -231,7 +231,7 @@
 							</ul>
 						</div>
 					</footer>
-
+				-->
 			</div>
 
 		<!-- Scripts -->
