corrected main page links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="about.html">
 										<h2>About</h2>
 										<div class="content">
 											<p>Brief description.</p>
@@ -71,7 +71,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="test.html">
+									<a href="projects.html">
 										<h2>Projects</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -82,7 +82,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="honors.html">
 										<h2>Honors</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -93,7 +93,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="cv.html">
 										<h2>CV</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -104,7 +104,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="stuff_and_things.html">
 										<h2>Stuff and things (blog?)</h2>
 										<div class="content">
 											<p>Random things that are vaguely interesting (blog?)</p>
@@ -120,8 +120,11 @@
 										<li><a href="https://github.com/Shaan106" class="button fit icon brands fa-github">GitHub</a></li>
 									</ul>
 									<ul class="actions fit">
-										<li><a href="mailto:shaan@yadu.in" class="button fit icon fa-envelope">Contact me</a></li>
+										<li><a href="https://www.youtube.com/channel/UC5ODxBVQlb0qzFhBr1LJ4ug" class="button fit icon brands fa-youtube">Youtube</a></li>
 									</ul>
+									<!--<ul class="actions fit">
+										<li><a href="mailto:shaan@yadu.in" class="button fit icon fa-envelope">Contact me</a></li>
+									</ul>-->
 
 								</article>
 
