--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Shaan</span>
+									<span class="symbol"><img src="images/logo2.gif" alt="" /></span><span class="title">Shaan</span>
 								</a>
 
 							<!-- Nav -->
