--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo2.gif" alt="" /></span><span class="title">Shaan</span>
+									<span class="symbol"><img src="images/logo2.gif" alt="" /></span><span class="title">Shaan Yadav</span>
 								</a>
 
 							<!-- Nav -->
@@ -112,16 +112,15 @@
 									</a>
 								</article>
 								<article>
-
-									<ul class="actions fit">
-										<li><a href="https://www.linkedin.com/in/shaanyadav/" class="button fit icon solid brands fa-linkedin">LinkedIn</a></li>
-									</ul>
+									<span class = "imagetemp">
+									<a href="https://www.linkedin.com/in/shaanyadav/" class="button fit icon solid brands fa-linkedin">LinkedIn</a>
 									<ul class="actions fit">
 										<li><a href="https://github.com/Shaan106" class="button fit icon brands fa-github">GitHub</a></li>
 									</ul>
 									<ul class="actions fit">
 										<li><a href="https://www.youtube.com/channel/UC5ODxBVQlb0qzFhBr1LJ4ug" class="button fit icon brands fa-youtube">Youtube</a></li>
 									</ul>
+									</span>
 									<!--<ul class="actions fit">
 										<li><a href="mailto:shaan@yadu.in" class="button fit icon fa-envelope">Contact me</a></li>
 									</ul>-->
