fixed mobile version

--- a/index.html
+++ b/index.html
@@ -113,14 +113,21 @@
 								</article>
 								<article>
 									<span class = "imagetemp">
-									<a href="https://www.linkedin.com/in/shaanyadav/" class="button fit icon solid brands fa-linkedin">LinkedIn</a>
+										<a href="https://www.linkedin.com/in/shaanyadav/" class="button fit icon solid brands fa-linkedin">LinkedIn</a>
+										<a href="https://github.com/Shaan106" class="button fit icon brands fa-github">GitHub</a>
+										<a href="https://www.youtube.com/channel/UC5ODxBVQlb0qzFhBr1LJ4ug" class="button fit icon brands fa-youtube">Youtube</a>
+									</span>
+										<!--
+									<ul class="actions fit">
+										<li><a href="https://www.linkedin.com/in/shaanyadav/" class="button fit icon solid brands fa-linkedin">LinkedIn</a></li>
+									</ul>
 									<ul class="actions fit">
 										<li><a href="https://github.com/Shaan106" class="button fit icon brands fa-github">GitHub</a></li>
 									</ul>
 									<ul class="actions fit">
 										<li><a href="https://www.youtube.com/channel/UC5ODxBVQlb0qzFhBr1LJ4ug" class="button fit icon brands fa-youtube">Youtube</a></li>
 									</ul>
-									</span>
+								-->
 									<!--<ul class="actions fit">
 										<li><a href="mailto:shaan@yadu.in" class="button fit icon fa-envelope">Contact me</a></li>
 									</ul>-->
