polished about and projects

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<a href="about.html">
 										<h2>About</h2>
 										<div class="content">
-											<p>Brief description.</p>
+											<p>A little bit about who I am.</p>
 										</div>
 									</a>
 								</article>
@@ -74,7 +74,7 @@
 									<a href="projects.html">
 										<h2>Projects</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A few of the projects I have worked on recently.</p>
 										</div>
 									</a>
 								</article>
@@ -85,7 +85,7 @@
 									<a href="honors.html">
 										<h2>Honors</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>&nbsp</p>
 										</div>
 									</a>
 								</article>
@@ -96,7 +96,7 @@
 									<a href="cv.html">
 										<h2>CV</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A link to my CV.</p>
 										</div>
 									</a>
 								</article>
@@ -105,9 +105,9 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="stuff_and_things.html">
-										<h2>Stuff and things (blog?)</h2>
+										<h2>blog</h2>
 										<div class="content">
-											<p>Random things that are vaguely interesting (blog?)</p>
+											<p>A collection of random things I found vaguely interesting.</p>
 										</div>
 									</a>
 								</article>
