--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
 
 							<h1>Projects Page</h1>
 
-							<a href="https://css-tricks.com/a-complete-guide-to-calc-in-css/" class="main-link" target="_blank">
+							<a href="projects/project_template.html" class="main-link" target="_blank">
 							  <article class="card card_background_test">
 							    <div>
 							      <p class="sub-heading">
