individual project templates completed.

--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
 							  </article>
 							</a>
 
-							<a href="https://css-tricks.com/a-complete-guide-to-calc-in-css/" class="main-link" target="_blank">
+							<a href="projects/project_template.html" class="main-link" target="_blank">
 							  <article class="card card_background_01_melanomaScan">
 							    <div>
 							      <p class="sub-heading">
@@ -85,7 +85,7 @@
 							  </article>
 							</a>
 
-							<a href="https://css-tricks.com/a-complete-guide-to-calc-in-css/" class="main-link" target="_blank">
+							<a href="projects/project_template.html" class="main-link" target="_blank">
 								<article class="card card_background_test">
 									<div>
 										<p class="sub-heading">
@@ -106,7 +106,7 @@
 								</article>
 							</a>
 
-							<a href="https://css-tricks.com/a-complete-guide-to-calc-in-css/" class="main-link" target="_blank">
+							<a href="projects/project_template.html" class="main-link" target="_blank">
 							  <article class="card card_background_test">
 							    <div>
 							      <p class="sub-heading">
@@ -127,7 +127,7 @@
 							  </article>
 							</a>
 
-							<a href="https://css-tricks.com/a-complete-guide-to-calc-in-css/" class="main-link" target="_blank">
+							<a href="projects/project_template.html" class="main-link" target="_blank">
 							  <article class="card card_background_test">
 							    <div>
 							      <p class="sub-heading">
@@ -148,7 +148,7 @@
 							  </article>
 							</a>
 
-							<a href="https://css-tricks.com/a-complete-guide-to-calc-in-css/" class="main-link" target="_blank">
+							<a href="projects/project_template.html" class="main-link" target="_blank">
 							  <article class="card card_background_test">
 							    <div>
 							      <p class="sub-heading">
