--- a/projects/project_melanoma_scan.html
+++ b/projects/project_melanoma_scan.html
@@ -33,12 +33,12 @@
 					<div id="main">
 						<div class="inner">
 
-							<article class="project_header card_background_test">
-								<h1>Template Project</h1>
+							<article class="project_header card_background_01_melanomaScan">
+								<h1>Melanoma Scan</h1>
 								<p>&nbsp</p>
 							</article>
 
-							<p>Project description</p>
+							<p>Brief description. Code below is irrelevant.</p>
 
 							<section><pre><code>
 i = 0;
@@ -52,8 +52,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 							<p>Demo video</p>
 
-							<iframe width=100% height= 1000em
-							src="https://www.youtube.com/embed/tgbNymZ7vqY">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/mePFA-zkgVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 							</iframe>
 
 						</div>
