added newspal to projects

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 							<h1>About Page</h1>
 							<p>
 								<span class="image right">
-									<img src="images/stock_profile.jpeg" class ="bottom_padding" alt="" />
+									<img src="images/Eton_profile_image.jpeg" class ="bottom_padding" alt="" />
 									<a href="mailto:shaan@yadu.in" class="button fit icon fa-envelope">Email</a>
 									<a href="https://www.linkedin.com/in/shaanyadav/" class="button fit icon solid brands fa-linkedin">LinkedIn</a>
 									<a href="https://github.com/Shaan106" class="button fit icon brands fa-github">GitHub</a>
