--- a/projects/project_melanoma_scan.html
+++ b/projects/project_melanoma_scan.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Project_template</title>
+		<title>Melanoma Scan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
