--- a/projects/project_melanoma_scan.html
+++ b/projects/project_melanoma_scan.html
@@ -55,6 +55,20 @@ print 'It took ' + i + ' iterations to sort the deck.';
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/mePFA-zkgVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 							</iframe>
 
+							<section>
+								<h2>Image</h2>
+								<h3>Fit</h3>
+								<div class="box alt">
+									<div class="row gtr-uniform">
+										<div class="col-12"><span class="image fit"><img src="images/pic13.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+									</div>
+								</div>
+							</section>
+
 						</div>
 					</div>
 
