--- a/projects/project_website.html
+++ b/projects/project_website.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Project_template</title> <!-- CHANGE HERE -->
+		<title>Website</title> <!-- CHANGE HERE -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -33,8 +33,8 @@
 					<div id="main">
 						<div class="inner">
 
-							<article class="project_header card_background_test"> <!-- CHANGE HERE -->
-								<h1>Template Project</h1> <!-- CHANGE HERE -->
+							<article class="project_header card_background_01_website"> <!-- CHANGE HERE -->
+								<h1>Shaan's Website</h1> <!-- CHANGE HERE -->
 								<p>&nbsp</p>
 							</article>
 
