added vita sanare project

--- a/index.html
+++ b/index.html
@@ -20,27 +20,8 @@
 									<span class="symbol"><img src="images/logo2.gif" alt="" /></span><span class="title">Shaan Yadav</span>
 								</a>
 
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
-
 						</div>
 					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-					</nav>
 
 				<!-- Main -->
 					<div id="main">
@@ -62,9 +43,10 @@
 										</div>
 									</a>
 								</article>
-								<article class="style1">
+
+								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="projects.html">
 										<h2>Projects</h2>
@@ -73,7 +55,20 @@
 										</div>
 									</a>
 								</article>
+
 								<article class="style3">
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<a href="experiences.html">
+										<h2>Experiences</h2>
+										<div class="content">
+											<p>A few things I have been involved in recently.</p>
+										</div>
+									</a>
+								</article>
+
+								<article class="style4">
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
@@ -84,20 +79,10 @@
 										</div>
 									</a>
 								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="cv.html">
-										<h2>CV</h2>
-										<div class="content">
-											<p>A link to my CV.</p>
-										</div>
-									</a>
-								</article>
+
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="stuff_and_things.html">
 										<h2>blog</h2>
