--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<header>
 								<h1>My name is <a href=""> Shaan </a> <br />
 								</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<p>I'm an innovator, programmer and entrepreneur. Some of the stuff on this website might be vaguely interesting.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
