--- a/projects/blog_thePerfectSlap.html
+++ b/projects/blog_thePerfectSlap.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Melanoma Scan</title>
+		<title>Project_template</title> <!-- CHANGE HERE -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -33,12 +33,12 @@
 					<div id="main">
 						<div class="inner">
 
-							<article class="project_header card_background_01_melanomaScan">
-								<h1>Melanoma Scan</h1>
+							<article class="project_header card_background_test"> <!-- CHANGE HERE -->
+								<h1>Template Project</h1> <!-- CHANGE HERE -->
 								<p>&nbsp</p>
 							</article>
 
-							<p>Brief description. Code below is irrelevant.</p>
+							<p>Project description</p> <!-- CHANGE HERE -->
 
 							<section><pre><code>
 i = 0;
@@ -52,8 +52,24 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 							<p>Demo video</p>
 
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/mePFA-zkgVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+							<iframe width=100% height= 1000em
+							src="https://www.youtube.com/embed/tgbNymZ7vqY"> <!-- CHANGE HERE -->
 							</iframe>
+
+							<section>
+								<h2>Images</h2> <!-- CHANGE HERE -->
+								<div class="box alt">
+									<div class="row gtr-uniform">
+										<div class="col-12"><span class="image fit"><img src="../images/pic13.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="../images/pic01.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="../images/pic02.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="../images/pic03.jpg" alt="" /></span></div>
+									</div>
+								</div>
+							</section>
+
+							<!-- Add link to github for each project -->
 
 						</div>
 					</div>
