created vaguely interesting blog

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>My name is <a href=""> Shaan </a> <br />
+								<h1>My name is <a href=""> Shaan</a>. <br/>
 								</h1>
 								<p>I'm an innovator, programmer and entrepreneur. Some of the stuff on this website might be vaguely interesting.</p>
 							</header>
@@ -85,9 +85,9 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="stuff_and_things.html">
-										<h2>blog</h2>
+										<h2>Vaguely Interesting</h2>
 										<div class="content">
-											<p>A collection of random things I found vaguely interesting.</p>
+											<p>A collection of some things I found vaguely interesting.</p>
 										</div>
 									</a>
 								</article>
