15jul slight cleanup

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>About Page</h1>
+							<h1>About Me</h1>
 							<p>
 								<span class="image right">
 									<img src="images/Eton_profile_image.jpeg" class ="bottom_padding" alt="" />
@@ -65,9 +65,29 @@
 									<a href="https://github.com/Shaan106" class="button fit icon brands fa-github">GitHub</a>
 									<a href="https://www.youtube.com/channel/UC5ODxBVQlb0qzFhBr1LJ4ug" class="button fit icon brands fa-youtube">Youtube</a>
 								</span>
-									Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.
+									I'm a student who likes making new things. I particularly like things that haven't been attempted before.
 							</p>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
+							<p>
+								I was born in India, and lived there until I was 8, when I went to boarding school in the middle of the British countryside.
+								I have been living in the UK since then (for 10 years now), and studied at Eton College (class of '22).
+							</p>
+							<p>
+								I'll be studying at Duke starting this fall (class of '26) and hope to do a double major in Computer Science &
+								Electrical and Computer Engineering (most likely doing a concentration in machine learning).
+							</p>
+							<p>
+								A few of the things I'm interested in right now (these are completely unrelated things that just pique my interest) -
+							</p>
+							<ul>
+								<li>Quantum Algorithms (things like Grover's algorithm)</li>
+								<li>General algorithmic intelligence, and consciousness through computation (similar to projects like GPT-3)</li>
+								<li>Fake News (how to prevent it)</li>
+								<li>Natural Language Processing, especially generative models</li>
+								<li>Computer Vision</li>
+								<li>Pathfinding using nature (such as <a href="https://youtu.be/81GQNPJip2Y"><u>by using ants</u></a>)</li>
+								<li>Prosthetics using the human nervous system</li>
+								<li>Pre-emptive disease detection</li>
+							</ul>
 						</div>
 					</div>
 
