finished melanoma scan project

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>My name is <a href=""> Shaan</a>. <br/>
+								<h1>My name is <a href="about.html"> Shaan</a>. <br/>
 								</h1>
 								<p>I'm an innovator, programmer and entrepreneur. Some of the stuff on this website might be vaguely interesting.</p>
 							</header>
