--- a/projects/project_melanoma_scan.html
+++ b/projects/project_melanoma_scan.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- stylesheet link for github logo-->
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 		<style>
 		body {
@@ -38,22 +39,71 @@
 								<p>&nbsp</p>
 							</article>
 
-							<p>Brief description. Code below is irrelevant.</p>
+							<hr>
+								<h2>Project Summary</h2>
 
-							<section><pre><code>
-i = 0;
-while (!deck.isInOrder()) {
-print 'Iteration ' + i;
-deck.shuffle();
-i++;
-};
-print 'It took ' + i + ' iterations to sort the deck.';
-						</code></pre></section>
+								<h3>Description</h3> <!--REMEMBER TO ADD STYLESHEET LINK-->
+								<p>
+									The app helps to identify melanoma from images taken by iPhones. The main melanoma detection part of the app was made using
+									the <a href="https://www.isic-archive.com/"><u>ISIC archive data</u></a>, and the machine learning algorithm I trained was inspired
+									by the <a href="https://paperswithcode.com/method/inception-v3"><u>Inception v3 convolutional neural network</u></a>.
+									<br>
+									<br>
+									The app also has many other features, from showing local environmental cancer risks to calculating likelygenetic risks based off of the user's phenotypes
+									(shown in the demo below, and briefly in the sections below).
+								</p>
 
-							<p>Demo video</p>
+								<h3>App Demo</h3>
+								<p>Here's a brief demo of a recent version of the app.</p>
 
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/mePFA-zkgVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-							</iframe>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/mePFA-zkgVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+								</iframe>
+
+							<hr>
+								<h2>Project Background</h2>
+								<p>
+									I initially started to tackle this problem during the 2020 summer (the first of the 'covid summers').
+									I had plenty of time in hand as I was stuck indoors like most people so I had decided to take a few courses to learn about how neural networks and
+									machine learning really works. That involved going over the fundamental mathematics and logic behind these
+									algorithms (<a href="https://www.coursera.org/specializations/deep-learning"><u>this deep learning specialisation</u></a> was especially helpful).
+									<br>
+									<br>
+									Having learnt a lot of the fundamentals behind machine learning, I wanted to do something with it. So, I
+									decided to try tackle a problem, and skin cancer detection was a problem that I was drawn to the most, as I could
+									use what I had just learnt to make a positive societal impact.
+								</p>
+								<h2>Initial Model</h2>
+								<p>
+									Below is the very first model I made for this problem. This is an implementation of a neural network from complete scratch. I only really used
+									numpy for vector maths, but the rest of the code did not use any libraries (apart from those to help me reformat images into vectors, display graphs etc).
+									In this implementation I made functions for each node, the activations etc, and then connected them together so that there was a logistic output.
+									<br>
+									<br>
+									I do now know a lot of things I did wrong (such as wrong type of network, and a serious lack of data and computation power), but this project helped me learn those
+									things. Below is a pdf showing the code I made for this (this was made in 2020, much before I made the app).
+
+									<a href="https://github.com/Shaan106/MelanomaDetector"><u><i class="fa fa-github" style="color:white;"></i>Github initial model link</u></a>.
+								</p>
+
+								<iframe src="project_melanoma_scan_media/Melanoma_detection_from_scratch.pdf" width="100%" height="500px">
+	    					</iframe>
+
+								<hr>
+
+								<section>
+									<h2>Gallery</h2>
+									<div class="box alt">
+										<div class="row gtr-uniform">
+											<div class="col-4"><span class="image fit"><img src="project_melanoma_scan_media/home_screen.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="project_melanoma_scan_media/benign_classification.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="project_melanoma_scan_media/malignant_classification.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="project_melanoma_scan_media/environmental_risks.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="project_melanoma_scan_media/image_storage.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="project_melanoma_scan_media/phenotype_risk.png" alt="" /></span></div>
+										</div>
+									</div>
+								</section>
+
 
 						</div>
 					</div>
