--- a/stuff_and_things.html
+++ b/stuff_and_things.html
@@ -43,12 +43,12 @@
 
 							<article>
 
-								<h4 id='article-4' slot='article-4'>IV. Teleportation?</h4>
+								<h4 id='article-4' slot='article-4'>III. Teleportation?</h4>
 								<p>If you make a digital copy of a person, accurate to the atomic scale
 								and then "print" a copy of them on a planet far away, destroying their current body,
 								are you teleporting them? Do they count as the same person?</p>
 
-								<h4 id='article-3' slot='article-3'>III. The Perfect Slap</h4>
+								<h4 id='article-3' slot='article-3'>II. The Perfect Slap</h4>
 								<p>Ever wondered what the scientific "best slap" is? Well I did. I decided to use my truly very professional expertise in biology and physics to find an answer.
 									<br>
 									<a href="stuff_and_things_content/the_perfect_slap.html"><u> And here's the result</u></a>.
@@ -58,12 +58,10 @@
 								<img src="stuff_and_things_content/slap_conclusion.png" alt="conclusion" width="50%">
 								<p>&nbsp</p>
 
-								<h4 id='article-2' slot='article-2'>II. Parfait</h4>
-								<p>Velociraptor was a mid-sized dromaeosaurid, with adults measuring up to 2.07 m (6.8 ft) long, 0.5 m (1.6 ft) high at the hip, and weighing up to 15 kg (33 lb). The skull, which grew up to 25 cm (10 in) long, was uniquely up-curved, concave on the upper surface and convex on the lower. The jaws were lined with 26–28 widely spaced teeth on each side, each more strongly serrated on the back edge than the front.</p>
-
-								<h4 id='article-1' slot='article-1'>I. Boltzmann has a brain</h4>
-								<p>You are but a hallucination of my brain floating about in space.
-								</p>
+								<h4 id='article-1' slot='article-1'>I. The Anthropic Principle</h4>
+								<p>Doomsday but science.</p>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/JwafiWxrD0A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+								</iframe>
 
 
 							</article>
