--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<header>
 								<h1>My name is <a href="about.html"> Shaan</a>. <br/>
 								</h1>
-								<p>I'm an innovator, programmer and entrepreneur. Some of the stuff on this website might be vaguely interesting.</p>
+								<p>I'm an innovator, programmer and entrepreneur. Some of the stuff on this website might be vaguely interesting. Website is still a work in progress.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
