--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,8 @@
 							<div class="card_row">
 								<div class="card_column">
 
-									<a href="projects/project_newspal.html" class="main-link" target="_blank">
+									<!-- <a href="projects/project_newspal.html" class="main-link" target="_blank"> -->
+									<a href="projects/stillworkingonit.html" class="main-link" target="_blank">
 										<article class="card card_background_01_newspal">
 											<div>
 												<p class="sub-heading">
@@ -103,7 +104,7 @@
 								</div>
 
 								<div class="card_column">
-									<a href="projects/project_template.html" class="main-link" target="_blank">
+									<a href="projects/stillworkingonit.html" class="main-link" target="_blank">
 									  <article class="card card_background_01_airfilterResearch">
 									    <div>
 									      <p class="sub-heading">
@@ -123,7 +124,7 @@
 								</div>
 							</div>
 
-							<a href="projects/project_template.html" class="main-link" target="_blank">
+							<a href="projects/stillworkingonit.html" class="main-link" target="_blank">
 								<article class="card card_background_01_qmResearch">
 									<div>
 										<p class="sub-heading">
@@ -143,7 +144,8 @@
 								</article>
 							</a>
 
-							<a href="projects/project_website.html" class="main-link" target="_blank">
+							<!-- <a href="projects/project_website.html" class="main-link" target="_blank"> -->
+							<a href="projects/stillworkingonit.html" class="main-link" target="_blank">
 								<article class="card card_background_01_website">
 									<div>
 										<p class="sub-heading">
@@ -163,7 +165,7 @@
 
 							<div class="card_row">
 								<div class="card_column">
-									<a href="projects/project_template.html" class="main-link" target="_blank">
+									<a href="projects/stillworkingonit.html" class="main-link" target="_blank">
 									  <article class="card card_background_01_gravity">
 									    <div>
 												<p class="sub-heading">
