a lot of new stuff

--- a/projects/project_melanoma_scan.html
+++ b/projects/project_melanoma_scan.html
@@ -40,20 +40,18 @@
 							</article>
 
 							<hr>
-								<h2>Project Summary</h2>
-
-								<h3>Description</h3> <!--REMEMBER TO ADD STYLESHEET LINK-->
+								<h2>Description</h2> <!--REMEMBER TO ADD STYLESHEET LINK-->
 								<p>
 									The app helps to identify melanoma from images taken by iPhones. The main melanoma detection part of the app was made using
 									the <a href="https://www.isic-archive.com/"><u>ISIC archive data</u></a>, and the machine learning algorithm I trained was inspired
 									by the <a href="https://paperswithcode.com/method/inception-v3"><u>Inception v3 convolutional neural network</u></a>.
 									<br>
 									<br>
-									The app also has many other features, from showing local environmental cancer risks to calculating likelygenetic risks based off of the user's phenotypes
+									The app also has many other features, from showing local environmental cancer risks to calculating likely genetic risk of skin cancer based off of the user's phenotypes
 									(shown in the demo below, and briefly in the sections below).
 								</p>
 
-								<h3>App Demo</h3>
+								<h2>App Demo</h2>
 								<p>Here's a brief demo of a recent version of the app.</p>
 
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/mePFA-zkgVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
@@ -104,6 +102,7 @@
 									</div>
 								</section>
 
+								<hr>
 
 						</div>
 					</div>
