--- a/stuff_and_things.html
+++ b/stuff_and_things.html
@@ -43,10 +43,10 @@
 
 							<article>
 
-								<h4 id='article-4' slot='article-4'>III. Teleportation?</h4>
-								<p>If you make a digital copy of a person, accurate to the atomic scale
-								and then "print" a copy of them on a planet far away, destroying their current body,
-								are you teleporting them? Do they count as the same person?</p>
+								<h4 id='article-4' slot='article-4'>III. Rango?</h4>
+								<p>Rango.</p>
+								<img src="stuff_and_things_content/Rango_sketch.png" alt="rango" width="50%">
+								<p>&nbsp</p>
 
 								<h4 id='article-3' slot='article-3'>II. The Perfect Slap</h4>
 								<p>Ever wondered what the scientific "best slap" is? Well I did. I decided to use my truly very professional expertise in biology and physics to find an answer.
