--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Resume (September 2023)</title> <!-- CHANGE HERE -->
+		<title>Resume (Updated December 7th 2023)</title> <!-- CHANGE HERE -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
