--- a/melanomaScanDocumentation.html
+++ b/melanomaScanDocumentation.html
@@ -7,11 +7,11 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     /* Include the custom font if needed */
-    @import url('https://fonts.googleapis.com/css2?family=YourCustomFont:wght@400;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
     body {
       /* Update this if you have a custom font */
-      font-family: "Times New Roman", Times, serif;
+      font-family: 'Ubuntu', sans-serif;
     }
   </style>
 </head>
