--- a/index.html
+++ b/index.html
@@ -6,19 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shaan's Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    /* Include the custom font if needed */
-    @import url('https://fonts.googleapis.com/css2?family=YourCustomFont:wght@400;700&display=swap');
-
-    body {
-      /* Update this if you have a custom font */
-      font-family: "Times New Roman", Times, serif;
-    }
-  </style>
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
+
+
+  <style>
+    /* Include the custom font if needed */
+    
+    @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
+
+    body {
+      /* Update this if you have a custom font */
+      font-family: 'Times New Roman', Times, serif;
+    }
+
+    .link:hover { color: #ff8800; }
+
+  </style>
 
 </head>
 
@@ -45,7 +52,7 @@
     <p class="mt-6 text-2xl">I'm currently a sophomore studying Electrical & Computer Engineering and Computer Science
       at Duke.
       I made this website to show a few projects I have worked on that I otherwise don't get to. <br>
-      You can find my resume <a href="resume.html"> <b> here</b></a>.</p>
+      You can find my resume <a class="link" href="resume.html"> <b> here</b></a>.</p>
   </section>
 
 
@@ -54,25 +61,25 @@
   <section class="container mx-auto px-4 py-0 pb-10 mb-10 text-center">
     <div class="flex justify-left space-x-4">
       <!-- LinkedIn -->
-      <a href="https://www.linkedin.com/in/shaanyadav/" class="flex items-center space-x-2 text-xl">
+      <a href="https://www.linkedin.com/in/shaanyadav/" class="link flex items-center space-x-2 text-xl">
         <span>LinkedIn</span>
         <i class="fab fa-linkedin fa-lg"></i>
       </a>
 
       <!-- GitHub -->
-      <a href="https://github.com/Shaan106" class="flex items-center space-x-2 text-xl">
+      <a href="https://github.com/Shaan106" class="link flex items-center space-x-2 text-xl">
         <span>GitHub</span>
         <i class="fab fa-github fa-lg"></i>
       </a>
 
       <!-- YouTube -->
-      <a href="https://www.youtube.com/watch?v=mePFA-zkgVY" class="flex items-center space-x-2 text-xl">
+      <a href="https://www.youtube.com/watch?v=mePFA-zkgVY" class="link flex items-center space-x-2 text-xl">
         <span>YouTube</span>
         <i class="fab fa-youtube fa-lg"></i>
       </a>
 
       <!-- Email -->
-      <a href="mailto:shaan.yadav@duke.edu" class="flex items-center space-x-2 text-xl">
+      <a href="mailto:shaan.yadav@duke.edu" class="link flex items-center space-x-2 text-xl">
         <span>shaan.yadav@duke.edu</span>
         <i class="fas fa-envelope fa-lg"></i>
       </a>
@@ -97,20 +104,18 @@
       <div class="flex">
         <div class="w-2/3">
           <p class="mt-0 text-xl pt-0"> <!-- Added top padding to the text content -->
-            - ConPLex <br>
-            - MelanomaScan <br>
-            - TeensInAI Course <br>
-            - Solar panel dust sensor <br>
-            - Logisim CPU <br>
-            - MIPS algorithm <br>
-            - Vita-Sanare <br>
-            - Palantir fire <br>
-            - BBC NewsPal <br>
-            - CERN BL4S <br>
-            - NASA Space Apps <br>
-            - Oppidan Scholar, BMO, Hoberman<br>
+            Melanoma Scan is a an iOS app I developed to help diagnose skin cancer using just iPhone cameras.
+            Here's <a class="link" href="https://www.youtube.com/watch?v=mePFA-zkgVY"> <u>the app demo</u></a>.
+            <br> <br>
 
-            - books/readings section?
+            I developed this app using XCode, and built the image classfication model with inspiration from the 
+            <a class="link" href="https://arxiv.org/abs/1512.00567"><u>Inception v3 model</u></a>. I have documented everything about developing
+             the app (from the ideation to stakeholder interviews to sprints & ticketing to testing and evaluation) <a class="link" href="melanomaScanDocumentation.html"><u>here</u></a>.
+
+            <br><br>
+
+            I learnt a lot through this project, such as full stack development, proper use of OOP, using APIs, creating and optimising ML models, 
+            using phone hardware (GPS and Cameras), data clearning & management, user-friendly and intuitive design, all while maintaining that the stakeholders are satisfied.
           </p>
         </div>
 
@@ -119,7 +124,7 @@
           <!-- Carousel wrapper -->
           <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
             <!-- Item 1 -->
-            <div class=" flex duration-700 ease-in-out bg-gray-800" data-carousel-item="active">
+            <div class="hidden flex duration-700 bg-gray-800" data-carousel-item="active">
 
               <img src="./assets/MelanomaScan/home_screen.png"
                 class="w-1/3" alt="...">
@@ -130,25 +135,15 @@
 
             </div>
             <!-- Item 2 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
-              <img src="./assets/images/melanoma_scan_card_img.png"
-                class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+            <div class="hidden flex duration-700 bg-gray-800" data-carousel-item>
+              <img src="./assets/MelanomaScan/image_storage.png"
+              class="w-1/3" alt="...">
+            <img src="./assets/MelanomaScan/malignant_classification.png"
+              class="w-1/3" alt="...">
+            <img src="./assets/MelanomaScan/phenotype_risk.png"
+              class="w-1/3" alt="...">
             </div>
-            <!-- Item 3 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
-              <img src="/docs/images/carousel/carousel-3.svg"
-                class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-            </div>
-            <!-- Item 4 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
-              <img src="/docs/images/carousel/carousel-4.svg"
-                class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-            </div>
-            <!-- Item 5 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
-              <img src="/docs/images/carousel/carousel-5.svg"
-                class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-            </div>
+
           </div>
           <!-- Slider indicators -->
           <div class="absolute z-30 flex -translate-x-1/2 space-x-3 rtl:space-x-reverse bottom-5 left-1/2">
@@ -156,19 +151,13 @@
               data-carousel-slide-to="0"></button>
             <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2"
               data-carousel-slide-to="1"></button>
-            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3"
-              data-carousel-slide-to="2"></button>
-            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 4"
-              data-carousel-slide-to="3"></button>
-            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 5"
-              data-carousel-slide-to="4"></button>
           </div>
           <!-- Slider controls -->
           <button type="button"
             class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
             data-carousel-prev>
             <span
-              class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+              class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 group-hover:bg-white/50 group-focus:ring-4 group-focus:ring-white group-focus:outline-none">
               <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true"
                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -181,7 +170,7 @@
             class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
             data-carousel-next>
             <span
-              class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+              class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 group-hover:bg-white/50 group-focus:ring-4 group-focus:ring-white group-focus:outline-none">
               <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true"
                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -336,59 +325,24 @@
     <h2 class="text-2xl font-bold">shaan.yadav@duke.edu</h2>
     <p class="mt-6 text-2xl">My resume is <a href="resume.html"> <b> <u> here</u></b></a>. I'd love to hear about any
       possible opportunities.</p>
+
+    <p>
+      - ConPLex <br>
+      - MelanomaScan <br>
+      - TeensInAI Course <br>
+      - Solar panel dust sensor <br>
+      - Logisim CPU <br>
+      - MIPS algorithm <br>
+      - Vita-Sanare <br>
+      - Palantir fire <br>
+      - BBC NewsPal <br>
+      - CERN BL4S <br>
+      - NASA Space Apps <br>
+      - Oppidan Scholar, BMO, Hoberman<br>
+
+      - books/readings section?
+    </p>
   </section>
-
-
-
-  <div id="indicators-carousel" class="relative w-full" data-carousel="static">
-    <!-- Carousel wrapper -->
-    <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
-      <!-- Item 1 -->
-      <div class="" data-carousel-item="active">
-        <img src="./assets/images/newspal_card_img.png" class="" alt="...">
-      </div>
-    </div>
-    <!-- Slider indicators -->
-    <div class="absolute z-30 flex -translate-x-1/2 space-x-3 rtl:space-x-reverse bottom-5 left-1/2">
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="true" aria-label="Slide 1"
-        data-carousel-slide-to="0"></button>
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2"
-        data-carousel-slide-to="1"></button>
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3"
-        data-carousel-slide-to="2"></button>
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 4"
-        data-carousel-slide-to="3"></button>
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 5"
-        data-carousel-slide-to="4"></button>
-    </div>
-    <!-- Slider controls -->
-    <button type="button"
-      class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
-      data-carousel-prev>
-      <span
-        class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-        <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M5 1 1 5l4 4" />
-        </svg>
-        <span class="sr-only">Previous</span>
-      </span>
-    </button>
-    <button type="button"
-      class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
-      data-carousel-next>
-      <span
-        class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-        <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="m1 9 4-4-4-4" />
-        </svg>
-        <span class="sr-only">Next</span>
-      </span>
-    </button>
-  </div>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
